[tool.poetry]
name = "llm-orchestrator"
version = "0.1.0"
description = "Create a LLM orchestrator which uses latest data available"
authors = ["Idlir Shkurti"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langchain-cohere = "^0.3.1"
langchain-experimental = "^0.3.3"
fire = "^0.7.0"
python-dotenv = "^1.0.1"
langchainhub = "^0.1.21"
langchain-openai = "^0.2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.2.0"
ruff = "^0.4.0"
nox = ">=2024.10.9"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
select = ["F", "E", "W"]  # Example rules for code formatting and linting